src/ERs.java
/* ERs.java */
/* Generated By:JavaCC: Do not edit this line. ERs.java */
import java.io.FileInputStream;
import java.io.File;
import java.io.IOException;
public class ERs implements ERsConstants {
        public static void main(String args []) throws ParseException
        {
                try
                {
                        System.out.println("Lendo arquivo fonte...");
                        FileInputStream fis = new FileInputStream(new File("..//JavaCC//src//fonte.txt"));
                        ERs parser = new ERs(fis);
                        parser.Start();
                        System.out.println("Arquivo fonte processado corretamente!");
                }
                catch (IOException e)
                {
                        System.out.println("Falha ao abrir arquivo fonte.");
                        System.exit(0);
                }
        }

  final public void declare_var() throws ParseException {
    trace_call("declare_var");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT_TYPE:{
        jj_consume_token(INT_TYPE);
        jj_consume_token(VARIABLE_ID);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 37:{
          jj_consume_token(37);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 38:{
            jj_consume_token(38);
            break;
            }
          default:
            jj_la1[0] = jj_gen;
            ;
          }
          jj_consume_token(INT_NUMBER);
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          ;
        }
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 39:{
            ;
            break;
            }
          default:
            jj_la1[2] = jj_gen;
            break label_1;
          }
          jj_consume_token(39);
          jj_consume_token(VARIABLE_ID);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 37:{
            jj_consume_token(37);
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case 38:{
              jj_consume_token(38);
              break;
              }
            default:
              jj_la1[3] = jj_gen;
              ;
            }
            jj_consume_token(INT_NUMBER);
            break;
            }
          default:
            jj_la1[4] = jj_gen;
            ;
          }
        }
        break;
        }
      case UINT_TYPE:{
        jj_consume_token(UINT_TYPE);
        jj_consume_token(VARIABLE_ID);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 37:{
          jj_consume_token(37);
          jj_consume_token(INT_NUMBER);
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          ;
        }
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 39:{
            ;
            break;
            }
          default:
            jj_la1[6] = jj_gen;
            break label_2;
          }
          jj_consume_token(39);
          jj_consume_token(VARIABLE_ID);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 37:{
            jj_consume_token(37);
            jj_consume_token(INT_NUMBER);
            break;
            }
          default:
            jj_la1[7] = jj_gen;
            ;
          }
        }
        break;
        }
      case FLOAT_TYPE:{
        jj_consume_token(FLOAT_TYPE);
        jj_consume_token(VARIABLE_ID);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 37:{
          jj_consume_token(37);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 38:{
            jj_consume_token(38);
            break;
            }
          default:
            jj_la1[8] = jj_gen;
            ;
          }
          jj_consume_token(FLOAT_NUMBER);
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          ;
        }
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 39:{
            ;
            break;
            }
          default:
            jj_la1[10] = jj_gen;
            break label_3;
          }
          jj_consume_token(39);
          jj_consume_token(VARIABLE_ID);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 37:{
            jj_consume_token(37);
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case 38:{
              jj_consume_token(38);
              break;
              }
            default:
              jj_la1[11] = jj_gen;
              ;
            }
            jj_consume_token(FLOAT_NUMBER);
            break;
            }
          default:
            jj_la1[12] = jj_gen;
            ;
          }
        }
        break;
        }
      case CHAR_TYPE:{
        jj_consume_token(CHAR_TYPE);
        jj_consume_token(VARIABLE_ID);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 37:{
          jj_consume_token(37);
          jj_consume_token(CHAR_VALUE);
          break;
          }
        default:
          jj_la1[13] = jj_gen;
          ;
        }
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 39:{
            ;
            break;
            }
          default:
            jj_la1[14] = jj_gen;
            break label_4;
          }
          jj_consume_token(39);
          jj_consume_token(VARIABLE_ID);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 37:{
            jj_consume_token(37);
            jj_consume_token(CHAR_VALUE);
            break;
            }
          default:
            jj_la1[15] = jj_gen;
            ;
          }
        }
        break;
        }
      case BOOL_TYPE:{
        jj_consume_token(BOOL_TYPE);
        jj_consume_token(VARIABLE_ID);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 37:{
          jj_consume_token(37);
          jj_consume_token(BOOL_VALUE);
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          ;
        }
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 39:{
            ;
            break;
            }
          default:
            jj_la1[17] = jj_gen;
            break label_5;
          }
          jj_consume_token(39);
          jj_consume_token(VARIABLE_ID);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 37:{
            jj_consume_token(37);
            jj_consume_token(BOOL_VALUE);
            break;
            }
          default:
            jj_la1[18] = jj_gen;
            ;
          }
        }
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(EOL);
    } finally {
      trace_return("declare_var");
    }
}

  final public void Start() throws ParseException {
    trace_call("Start");
    try {

      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT_TYPE:
        case UINT_TYPE:
        case FLOAT_TYPE:
        case CHAR_TYPE:
        case BOOL_TYPE:{
          ;
          break;
          }
        default:
          jj_la1[20] = jj_gen;
          break label_6;
        }
        declare_var();
      }
      jj_consume_token(0);
    } finally {
      trace_return("Start");
    }
}

  /** Generated Token Manager. */
  public ERsTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[21];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0xf800,0xf800,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x40,0x20,0x80,0x40,0x20,0x20,0x80,0x20,0x40,0x20,0x80,0x40,0x20,0x20,0x80,0x20,0x20,0x80,0x20,0x0,0x0,};
	}

  {
      enable_tracing();
  }
  /** Constructor with InputStream. */
  public ERs(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public ERs(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new ERsTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 21; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 21; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public ERs(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new ERsTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 21; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new ERsTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 21; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public ERs(ERsTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 21; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ERsTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 21; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   trace_token(token, "");
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	   trace_token(token, " (in getNextToken)");
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[40];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 21; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		   if ((jj_la1_1[i] & (1<<j)) != 0) {
			 la1tokens[32+j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 40; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  private boolean trace_enabled;

/** Trace enabled. */
  final public boolean trace_enabled() {
	 return trace_enabled;
  }

  private int trace_indent = 0;
/** Enable tracing. */
  final public void enable_tracing() {
	 trace_enabled = true;
  }

/** Disable tracing. */
  final public void disable_tracing() {
	 trace_enabled = false;
  }

  protected void trace_call(String s) {
	 if (trace_enabled) {
	   for (int i = 0; i < trace_indent; i++) { System.out.print(" "); }
	   System.out.println("Call:	" + s);
	 }
	 trace_indent = trace_indent + 2;
  }

  protected void trace_return(String s) {
	 trace_indent = trace_indent - 2;
	 if (trace_enabled) {
	   for (int i = 0; i < trace_indent; i++) { System.out.print(" "); }
	   System.out.println("Return: " + s);
	 }
  }

  protected void trace_token(Token t, String where) {
	 if (trace_enabled) {
	   for (int i = 0; i < trace_indent; i++) { System.out.print(" "); }
	   System.out.print("Consumed token: <" + tokenImage[t.kind]);
	   if (t.kind != 0 && !tokenImage[t.kind].equals("\"" + t.image + "\"")) {
		 System.out.print(": \"" + TokenMgrError.addEscapes(t.image) + "\"");
	   }
	   System.out.println(" at line " + t.beginLine + " column " + t.beginColumn + ">" + where);
	 }
  }

  protected void trace_scan(Token t1, int t2) {
	 if (trace_enabled) {
	   for (int i = 0; i < trace_indent; i++) { System.out.print(" "); }
	   System.out.print("Visited token: <" + tokenImage[t1.kind]);
	   if (t1.kind != 0 && !tokenImage[t1.kind].equals("\"" + t1.image + "\"")) {
		 System.out.print(": \"" + TokenMgrError.addEscapes(t1.image) + "\"");
	   }
	   System.out.println(" at line " + t1.beginLine + " column " + t1.beginColumn + ">; Expected token: <" + tokenImage[t2] + ">");
	 }
  }

}
